tests/characterization/snapshots/characterization__need_command__curl_missing.snap
---
source: tests/characterization/main.rs
expression: output
---
exit: 1
--- stdout ---
--- stderr ---
Error: 'curl' is required but was not found on PATH.
--- end ---
